gobmkida/c2/second_order_liberty_of_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/second_order_liberty_of_string/src/engine/board.c:2887:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v4] == v5 && string[239].neighborlist[v4 + 160] == string_number[str] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/second_order_liberty_of_string/src/engine/board.c:2888:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v4] == v5 && string[239].neighborlist[v4 + 141] == string_number[str] 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/second_order_liberty_of_string/src/obj/1/board.o] Error 1
